# retail-pos-management

./: Frontend-Documentation.md  New_schema.md  README.md  backend-documentation.md  frontend-docs.md  old_schema.md  render.yaml  requirements.txt
backend/: .env  Dockerfile  main.py  pyproject.toml  render.yaml  requirements-prod.txt  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  (+11 more)
backend/app/core/: config.py  security.py  supabase_client.py
backend/app/crud/: __init__.py  base.py  crud_customer.py  crud_product.py  crud_razorpay_connection.py  crud_razorpay_payment.py  crud_sale.py  crud_sale_item.py  crud_setting.py  crud_store.py  crud_tenant.py  crud_user.py
backend/app/db/: __init__.py  base.py  base_class.py  session.py
backend/app/models/: __init__.py  customer.py  product.py  razorpay_connection.py  razorpay_payment.py  sale.py  sale.py.backup  sale_item.py  setting.py  store.py  store.py.backup  tenant.py  user.py
backend/app/schemas/: __init__.py  customer.py  product.py  razorpay_connection.py  razorpay_payment.py  sale.py  sale_item.py  setting.py  store.py  tenant.py  user.py
backend/app/services/: auth.py  base.py  customers.py  product_service.py  products.py  razorpay.py  sales.py  sales_service.py  settings.py  storage.py  storage_service.py  tenant_auth.py  tenant_management.py  tenant_products.py  users.py
backend/app/utils/: error_handlers.py  exceptions.py  logger.py  pagination.py
backend/migrations/: 001_create_rls_schema.sql
backend/scripts/: seed_products.py
(+58 files in other folders)
